Use the data class for the nickname in the TextView

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,6 +39,7 @@ limitations under the License. -->
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAlignment="center"
+            android:text="@={myName.nickname}"
             android:visibility="gone" />
 
         <EditText
